fixes bug in root styling on mobile

--- a/src/styles/configurator.scss
+++ b/src/styles/configurator.scss
@@ -55,8 +55,7 @@ canvas:focus {
 
 @media (max-width: 750px) {
   #root {
-    height: 90%;
-    
+    height: 85vh;
   }
 
   .configurator-root {
